tests/invalid/function_parameter_missing_after_comma.wio
fn Add(x: i32, ) -> i32 {
    return x;
}

fn Entry() -> i32 {
    return Add(7);
}
